--- a/src/styles/common/_variables.scss
+++ b/src/styles/common/_variables.scss
@@ -1,10 +1,10 @@
 // Fonts
-$font: Arial, "Helvetica Neue", Helvetica, sans-serif;
+// $font: Arial, "Helvetica Neue", Helvetica, sans-serif;
 
-$h1-fz-mobile: 20px;
-$h1-fz-tablet: 32px;
-$h1-fz-desktop: 48px;
-$h1-fw: 400;
+// $h1-fz-mobile: 20px;
+// $h1-fz-tablet: 32px;
+// $h1-fz-desktop: 48px;
+// $h1-fw: 400;
 
 // colors
 
