--- a/src/styles/common/_variables.scss
+++ b/src/styles/common/_variables.scss
@@ -1,5 +1,7 @@
 // Fonts
-// $font: Arial, "Helvetica Neue", Helvetica, sans-serif;
+$font-tittle: 'OpenSans-SemiBold', sans-serif;
+
+$font: 'OpenSans-Regular', sans-serif;
 
 // $h1-fz-mobile: 20px;
 // $h1-fz-tablet: 32px;
@@ -7,6 +9,10 @@
 // $h1-fw: 400;
 
 // colors
+$color-dark: #403232;
+$color-accent: red;
+$color-light: #FFFF;
+
 
 // indents
 
