--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,7 +1,10 @@
 // common files
-// @import "common/_variables";
-// @import "common/_fonts";
-// @import "common/_common";
+@import "common/_variables";
+@import "common/_fonts";
+@import "common/_common";
 
 // // blocks
-// @import "blocks/_promo";
+@import "blocks/_promo";
+@import"blocks/_header";
+@import"blocks/_main-menu";
+@import"blocks/_btn";
