сверстала часть services

--- a/src/styles/blocks/_btn.scss
+++ b/src/styles/blocks/_btn.scss
@@ -1,15 +1,14 @@
 .btn {
     display: inline-block;
-    width: 117px;
-    // height: 90px;
-    padding: 15px;
+    width: 497px;
+    height: 104px;
     color: #fff;
     font-family: $font;
-    font-size: 14px;
-    line-height: 24px;
+    font-size: 42px;
     text-align: center;
     text-decoration: none;
     background-color: $color-accent;
     border: none;
-
+    border-radius: 5px;
   }
+ 
