--- a/src/styles/blocks/_main-menu.scss
+++ b/src/styles/blocks/_main-menu.scss
@@ -22,4 +22,11 @@
       }
     }
 }
+.main-menu .btn {
+  width: 117px;
+  height: 90px;
+  font-size: 14px;
+  padding-top: 30px;
+  line-height: 24px;
+} 
 
