--- a/src/styles/blocks/_promo.scss
+++ b/src/styles/blocks/_promo.scss
@@ -9,10 +9,9 @@
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
-    height: 100vh;
     margin: 0 auto;
     display: flex;
-   
+    flex-direction: column;
   
 }
   h1 {
@@ -24,6 +23,15 @@
     margin-top: 200px;
     color: $color-light;
 }
+.promo .btn {
+    align-self: center;
+    margin-top: 120px;
+    margin-bottom: 214px;
+    padding-top: 30px;
+
+    
+}
+
 
 // .promo-inner {
 //   margin: 0 auto;
