--- a/src/styles/common/_common.scss
+++ b/src/styles/common/_common.scss
@@ -4,10 +4,9 @@
     box-sizing: border-box;
 }
 
-// body {
-//   font-family: $font;
-//   color: $color-dark;
-// }
+body {
+    background-color: #c4c4c4;
+}
 
 img {
     max-width: 100%;
