--- a/src/styles/common/_variables.scss
+++ b/src/styles/common/_variables.scss
@@ -12,8 +12,12 @@ $font: 'OpenSans-Regular', sans-serif;
 $color-dark: #403232;
 $color-accent: red;
 $color-light: #FFFF;
+$color-basedark: #3333;
+
 
 
 // indents
+$gap: 20px;
+$gap-half: calc($gap / 2);
 
 // breakpoints
