--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -1,12 +1,17 @@
 .header {
-    background-color: #403232;
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 1000;
+    width: 100%;
+    background-color: $color-dark;
 }
 .header-wrap {
     display: flex;
     align-items: center;
     padding-left: 82px;
     padding-right: 82px;
-    // background-color: aqua;
+  
 }
 .header-logo {
     margin-right: auto;
@@ -17,4 +22,4 @@
     font-size: 42px;
     line-height: 49px;
     text-decoration: none;
-  }
+}
