--- a/src/styles/blocks/_services.scss
+++ b/src/styles/blocks/_services.scss
@@ -7,14 +7,29 @@ h2 {
     font-family: $font;
     font-size: 60px;
     text-align: center;
-    padding-top: 130px;   
+    padding-top: 130px;
+    // @include section-h2;   
 }
 .image {
     margin-top: 100px;
     margin-bottom: 120px;
+    display: flex;
 }
-.img {
+// .services {
+//     margin-left: 82px;
+//     margin-right: 82px;
+// }
+
+.services-figure {
+    flex-shrink: 0;
     padding: 0 $gap-half;
+   
+}
+.figure-img {
+    position: relative;
+}
+.caption {
+    @include section-caption;
 }
 .services .btn {
     margin-bottom: 130px;
