свестала вторую страницу

--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -6,6 +6,9 @@
     width: 100%;
     background-color: $color-dark;
 }
+// .header-inner {
+//     @include inner;
+// }
 .header-wrap {
     display: flex;
     align-items: center;
