--- a/src/styles/blocks/_order.scss
+++ b/src/styles/blocks/_order.scss
@@ -1,4 +1,8 @@
 .order {
+   
+    background-color: #c4c4c4;
+}
+.order-inner {
     display: flex;
     flex-direction: column;
     margin: 0 72px;
