--- a/src/styles/common/_common.scss
+++ b/src/styles/common/_common.scss
@@ -5,9 +5,11 @@
 }
 
 body {
-    background-color: #c4c4c4;
+    padding-top: 88px;
+    
 }
 
 img {
-    max-width: 100%;
+    width: 100%;
+    display: block;
 }
