сверстала страницу контакты

--- a/src/styles/blocks/_order.scss
+++ b/src/styles/blocks/_order.scss
@@ -3,6 +3,9 @@
     background-color: #c4c4c4;
 }
 .order-inner {
+    @include inner;
+}
+.order-wrap {
     display: flex;
     flex-direction: column;
     margin: 0 72px;
