--- a/src/styles/blocks/_form.scss
+++ b/src/styles/blocks/_form.scss
@@ -1,8 +1,10 @@
 .form {
     display: flex;
     width: 100%;
-    margin: 90px 0 130px;
+    justify-content: space-between;
+    padding: 90px 0 130px;
     font-size: 20px;
+   
 }
   
 .form-field {
