--- a/src/styles/blocks/_promo.scss
+++ b/src/styles/blocks/_promo.scss
@@ -13,7 +13,7 @@
     flex-direction: column;
   
 }
-  h1 {
+.promo-ttl {
     text-align: center;
     width: 1276px;
     font-family: $font-tittle;
