--- a/src/styles/blocks/_btn.scss
+++ b/src/styles/blocks/_btn.scss
@@ -10,5 +10,12 @@
     background-color: $color-accent;
     border: none;
     border-radius: 5px;
+
+    @media (max-width: $mobile-max) {
+      width: 278px;
+      height: 73px;
+      font-size: 24px;
+      line-height: 33px;  
   }
  
+}
