--- a/src/styles/blocks/_contacts.scss
+++ b/src/styles/blocks/_contacts.scss
@@ -23,23 +23,35 @@ h2 {
 .cities p {
     display: inline-block;
     padding-left: 50px;
+    color: rgba(0 0 0.8);
    
 }
 .cities :first-child {
     padding-left: 0;
     color: $color-accent;
 }
-.contacts-wrap ul {
-    flex-direction: column;
+.contacts-content {
+    display: flex;
+    margin-top: 35px;
+  
+}
+.contacts-content ul {
+    display: inline-block;
+    max-width: 291px;
+    margin-left: auto;
+    padding-top: 10px;
     font-family: $font;
     font-size: 24px;
     line-height: 33px;
-    padding-top: 40px;
-   
-         
 }
-.contacts-wrap li {
-    display: block;
-    margin-right: auto;
+.contacts-content .map {
+    display: inline-block;
+    max-width: 733px;
+    margin-left: 145px;
+    padding: 0;
+    filter: drop-shadow(0 0 18px rgba(212, 98, 64, 0.1));
     
 }
+
+    
+
