--- a/src/styles/blocks/_form.scss
+++ b/src/styles/blocks/_form.scss
@@ -18,8 +18,10 @@
 }
     
 .form-label {
-    width: 400px;
+    font-family: $font;
+    font-size: 20px;
     line-height: 27px;
+    width: 400px;
 }
   
 .form-input   {
