--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -6,15 +6,19 @@
     width: 100%;
     background-color: $color-dark;
 }
-// .header-inner {
-//     @include inner;
-// }
+
 .header-wrap {
     display: flex;
     align-items: center;
-    padding-left: 82px;
-    padding-right: 82px;
-  
+    padding: 0 82px;
+
+    @media (max-width: $tablet-max) {
+        padding: 0 10px;
+    }
+
+    @media (max-width: $mobile-max) {
+        padding: 0 16px;
+    }
 }
 .header-logo {
     margin-right: auto;
@@ -25,4 +29,23 @@
     font-size: 42px;
     line-height: 49px;
     text-decoration: none;
+
+    @media (max-width: $tablet-max) {
+        font-size: 36px;
+        line-height: 49px;   
+    }
+    @media (max-width: $mobile-max) {
+        font-size: 28px;
+        line-height: 39px;
+    }
+}
+.burger {
+    display: none;
+    width: 30px;
+    height: 30px;
+    background-color: $color-dark;
+
+    @media (max-width: $mobile-max) {
+        display: block;
+    }
 }
