--- a/src/styles/blocks/_promo.scss
+++ b/src/styles/blocks/_promo.scss
@@ -1,6 +1,6 @@
 .promo {
   display: flex;
-  margin: auto;
+  margin:  auto;
 }
 
 .promo-visual {
@@ -9,31 +9,56 @@
     background-size: cover;
     width: 100%;
     margin: 0 auto;
+    padding-top: 200px;
+    padding-bottom: 214px;
     display: flex;
     flex-direction: column;
-  
+
+    @media (max-width: $tablet-max) {
+        padding-top: 180px;
+        padding-bottom: 190px; 
+    }
+    @media (max-width: $mobile-max) {
+        padding-top: 110px;
+        padding-bottom: 100px; 
+        margin-top: 0;
+    }
 }
+
 .promo-ttl {
     text-align: center;
+    margin: 0 auto;
     width: 1276px;
     font-family: $font-tittle;
     font-size: 72px;
     line-height: 98px;
-    margin-top: 200px;
     color: $color-light;
+    margin-bottom: 100px;
+  
+    @media (max-width: $tablet-max) {
+        width: 747px;
+        font-size: 54px;
+        line-height: 74px; 
+    } 
+      
+    @media (max-width: $mobile-max) {
+        width: 300px;
+        font-size: 32px;
+        line-height: 44px; 
+        margin-bottom: 80px; 
+    }
 }
+
 .promo .btn {
     align-self: center;
-    margin-top: 120px;
-    margin-bottom: 214px;
     padding-top: 30px;
-
+    
+     @media (max-width: $mobile-max) {
+        padding-top: 15px;
+     }
 }
 
 
-// .promo-inner {
-//   margin: 0 auto;
-//   width: 1024px;
 
 //   @media (max-width: 1279px) {
 //     width: auto;
@@ -41,14 +66,14 @@
 //   }
 // }
 
-.promo-ttl {
+// .promo-ttl {
 //   font-size: $h1-fz-desktop;
 //   font-weight: $h1-fw;
 //    font-weight: 600;
 //    font-size: 72px;
 //    line-height: 98px;
 //    color: $color-light;
-}
+// }
 //   @media (max-width: 1279px) {
 //     font-size: $h1-fz-tablet;
 //   }
