--- a/src/styles/common/_variables.scss
+++ b/src/styles/common/_variables.scss
@@ -21,3 +21,9 @@ $gap: 20px;
 $gap-half: calc($gap / 2);
 
 // breakpoints
+$mobile: 320px;
+$tablet: 768px;
+$desktop: 1280px;
+
+$mobile-max: $tablet - 1;
+$tablet-max: $desktop - 1;
