закончила адаптив первой страницы

--- a/src/styles/blocks/_form.scss
+++ b/src/styles/blocks/_form.scss
@@ -1,22 +1,34 @@
 .form {
     display: flex;
-    width: 100%;
+   
+    flex-basis: 100%;
     justify-content: space-between;
-    padding: 90px 0 130px;
-    font-size: 20px;
+    font-size: 28px;
+    line-height: 38px;
+   
+    @media (max-width: $tablet-max) {
+      width: auto; 
+      flex-wrap: wrap;
+   }
+    @media (max-width: $mobile-max) {
+    display: block;
+   }
    
 }
   
 .form-field {
-    padding: 0 $gap-half;
-    
+    width: 33.33%;
+    margin-right: $gap;
+
+    @media (max-width: $tablet-max) {
+        width: 50%;
+        margin-right: 0;
+    }
+    @media (max-width: $mobile-max) {
+        width: 100%;
+    }
 }
-.form .btn {
-    display: block;
-    margin-top: 27px;
-       
-}
-    
+
 .form-label {
     font-family: $font;
     font-size: 20px;
