--- a/src/styles/blocks/_btn.scss
+++ b/src/styles/blocks/_btn.scss
@@ -19,3 +19,15 @@
   }
  
 }
+.btn-form {
+    display: flex;
+    margin-top: 40px;
+    width: 106%;
+    align-items: center;
+    justify-content: center;
+    
+    @media (max-width: $tablet-max) {
+       width: 100%;
+       margin-top: 40px;
+    }
+}
