--- a/src/styles/blocks/_footer.scss
+++ b/src/styles/blocks/_footer.scss
@@ -1,21 +1,65 @@
 .footer {
-    display: flex;
-    justify-content: space-between;
-    height: 119px;
     background-color: $color-dark;
     color: $color-light;
+   
+}
+.footer-inner {
+    @include inner;
+    display: flex;
+    flex-wrap: wrap;
     align-items: center;
-    padding-left: 82px;
-    padding-right: 82px;
+}
+
+.footer-logo {
+    margin-right: auto;
+    font-family: 'OpenSans';
+    font-weight: 600;
+    color: $color-light;
+    font-weight: 600;
+    font-size: 42px;
+    line-height: 49px;
+    text-decoration: none;
+   
+    @media (max-width: $tablet-max) {
+        font-size: 36px;
+        line-height: 49px; 
+        
+    }
+    @media (max-width: $mobile-max) {
+        display: block;
+        margin: 0 auto;
+        width: 120px;
+        font-size: 28px;
+        line-height: 39px;
+    }
 }
 
 .footer .phone {
     display: block;
+    margin: 0 auto;
     width: 225px;
     font-family: $font;
     font-size: 28px;
     color: $color-light;
   
 }
+ul {
+    display: flex;
+    list-style: none;
+    
+    li {
+      margin-left: 30px;
+
+        @media (max-width: $mobile-max) {
+        display: block;
+        margin-left: 0;
+        margin-top: 20px;
+        margin-bottom: 20px;
+        text-align: center;
+      }
+    }    
+
+}
+
 
 
