--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -32,9 +32,11 @@
 
     @media (max-width: $tablet-max) {
         font-size: 36px;
-        line-height: 49px;   
+        line-height: 49px; 
+        
     }
     @media (max-width: $mobile-max) {
+        width: 120px;
         font-size: 28px;
         line-height: 39px;
     }
@@ -47,5 +49,6 @@
 
     @media (max-width: $mobile-max) {
         display: block;
+        margin-right: 10px;
     }
 }
