--- a/src/styles/blocks/_promo.scss
+++ b/src/styles/blocks/_promo.scss
@@ -7,6 +7,7 @@
     background-image: url(../images/promo.png);
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center center;
     width: 100%;
     margin: 0 auto;
     padding-top: 200px;
