--- a/src/styles/blocks/_services.scss
+++ b/src/styles/blocks/_services.scss
@@ -2,10 +2,16 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding:  130px 0;
+
+    @media (max-width: $tablet-max) {
+        padding:  120px 0;
+    }
+    @media (max-width: $mobile-max) {
+        padding:  90px 0;
+    }
 }
-.services-inner {
-    @include inner;
-}
+
 h2 {
     @include section-h2;   
 }
@@ -15,6 +21,8 @@ h2 {
     justify-content:  center;
     align-items: center;
     margin:  80px 0 40px;
+
+   
 }
 .services-works p {
     display: block;
@@ -38,8 +46,19 @@ h2 {
     flex-basis: 25%;
     flex-shrink: 0;
     padding: $gap-half;
-  
+
+    @media (max-width: $tablet-max) {
+        flex-wrap: wrap; 
+        flex-basis: 50%;
+        justify-content: center;       
+    }
+
+    @media (max-width: $mobile-max) {
+        flex-basis: 100%;
+        
+    }
 }
+
 .figure-img {
     position: relative;
 }
@@ -47,8 +66,10 @@ h2 {
     @include section-caption;
 }
 .services .btn {
-    margin-bottom: 130px;
+    // margin-bottom: 130px;
     padding-top: 30px;
    
-
+    @media (max-width: $mobile-max) {
+        padding-top: 20px;  
+    }
 }
