--- a/src/styles/blocks/_FAQ.scss
+++ b/src/styles/blocks/_FAQ.scss
@@ -1,44 +1,79 @@
 .information-inner {
     @include inner;
+    padding: 130px 0;
+   
+    @media (max-width: $tablet-max) {
+        padding: 120px 0;
+    }
+    @media (max-width: $mobile-max) {
+    padding: 90px 0;
+    }
 }
 .information-inner h2 {
     @include section-h2;
 }
 .information-wrap {
-    margin: 80px 0 130px;
+    margin-top: 80px;
+   
+    @media (max-width: $tablet-max) {
+        margin-top: 70px;
+    }
+    @media (max-width: $mobile-max) {
+        margin-top: 50px;
+    }
 }
 .information-wrap .itm1, .itm2 {
     display: flex;
     justify-content: space-between;
-    padding: 25px 30px;
+    padding: 0 30px;
     align-items: center;
 }
-.information-wrap .itm1 {
-    margin-bottom: 40px;
-  
-}
+// .information-wrap .itm1 {
+//     // margin-bottom: 40px;
+   
+// }
 .itm1 p, .itm2 p {
     font-family: $font;
     font-size: 36px;
     line-height: 49px;
+   
+    @media (max-width: $tablet-max) {
+        font-size: 32px;
+        line-height: 44px;
+    }
+    @media (max-width: $mobile-max) {
+        font-size: 20px;
+        line-height: 27px;
+    }
 }
-.itm1 .plus {
+
+.itm1 .plus, .itm2 .minus {
     width: 40px;
     height: 40px;
 
+    @media (max-width: $mobile-max) {
+    width: 30px;
+}
 }
 .itm2 .minus {
-    width: 40px;
     height: 2px;
 }
 .text p {
     display: block;
     max-width: 1192px;
-    margin-bottom: 30px;
-    margin-left: 30px;
+    margin: 25px 30px;
     font-family: $font;
     font-size: 18px;
     line-height: 25px;
     text-align: left;
+   
+    @media (max-width: $tablet-max) {
+        font-size: 16px;
+        line-height: 22px;
+    }
+    @media (max-width: $mobile-max) {
+        font-size: 14px;
+        line-height: 19px;
+    }
 }
 
