--- a/src/styles/blocks/_contacts.scss
+++ b/src/styles/blocks/_contacts.scss
@@ -1,3 +1,13 @@
+.contacts {
+    padding: 130px 0;
+
+    @media (max-width: $tablet-max) {
+        padding: 120px 0;
+    }
+    @media (max-width: $mobile-max) {
+        padding: 90px 0;
+    }
+}
 .contacts-inner {
     @include inner;
 }
@@ -7,9 +17,7 @@ h2 {
 .contacts-wrap {
     display: flex;
     flex-direction: column;
-    padding-top: 80px;
-    padding-bottom: 40px;
-   
+      
 }
 .cities {
     display: flex;
@@ -17,40 +25,69 @@ h2 {
     font-family: $font;
     font-size: 22px;
     line-height: 24px;
-    margin: 0 303px;
+    margin-bottom: 40px;
+   
+    @media (max-width: $tablet-max) {
+        padding-top: 70px;
+    }
+    @media (max-width: $mobile-max) {
+        padding-top: 50px;
+        padding-bottom: 30px;
+    }
     
 }
-.cities p {
+.cities a {
     display: inline-block;
     padding-left: 50px;
     color: rgba(0 0 0.8);
-   
+    text-decoration: none;
+    &:hover {
+        color: $color-accent;
+    }
+  
 }
 .cities :first-child {
     padding-left: 0;
-    color: $color-accent;
+  
 }
 .contacts-content {
     display: flex;
-    margin-top: 35px;
+   
+    @media (max-width: $mobile-max) {
+        flex-wrap: wrap;
+    }
   
 }
 .contacts-content ul {
-    display: inline-block;
-    max-width: 291px;
-    margin-left: auto;
-    padding-top: 10px;
+    display: block;
+    width: 40%;
+    text-align: center;
+    padding-top: 15px;
     font-family: $font;
     font-size: 24px;
     line-height: 33px;
+    list-style: none;
+   
+    @media (max-width: $tablet-max) {
+        font-size: 18px;
+        line-height: 25px;
+    }
+    @media (max-width: $mobile-max) {
+        font-size: 16px;
+        line-height: 22px;
+        width: 100%;
+        text-align: left;
+    }
 }
 .contacts-content .map {
-    display: inline-block;
-    max-width: 733px;
-    margin-left: 145px;
-    padding: 0;
+    display: block;
+    width: 60%;
     filter: drop-shadow(0 0 18px rgba(212, 98, 64, 0.1));
     
+      @media (max-width: $mobile-max) {               display: flex;
+        width: 100%;
+        
+    }
 }
 
     
