--- a/src/styles/blocks/_footer.scss
+++ b/src/styles/blocks/_footer.scss
@@ -5,13 +5,26 @@
 }
 .footer-inner {
     @include inner;
+   
+}
+.footer-wrap {
+    padding: 13px 0 30px;
     display: flex;
-    flex-wrap: wrap;
     align-items: center;
+   
+    @media (max-width: $tablet-max) {
+        padding-top: 35px;
+    }
+    @media (max-width: $mobile-max) {
+        padding-top: 30px;
+        display: block;
+        text-align: center;
+    }
 }
 
 .footer-logo {
     margin-right: auto;
+    width: 180px;
     font-family: 'OpenSans';
     font-weight: 600;
     color: $color-light;
@@ -19,16 +32,14 @@
     font-size: 42px;
     line-height: 49px;
     text-decoration: none;
-   
+      
     @media (max-width: $tablet-max) {
+        width: 154px;
         font-size: 36px;
         line-height: 49px; 
         
     }
     @media (max-width: $mobile-max) {
-        display: block;
-        margin: 0 auto;
-        width: 120px;
         font-size: 28px;
         line-height: 39px;
     }
@@ -36,29 +47,27 @@
 
 .footer .phone {
     display: block;
-    margin: 0 auto;
+    margin-right: 60px;
     width: 225px;
     font-family: $font;
     font-size: 28px;
     color: $color-light;
-  
+
+    @media (max-width: $mobile-max) {
+        margin: 30px auto 15px;
+    }
+     
 }
-ul {
+.footer-wrap .social {
     display: flex;
+    justify-content: center;
     list-style: none;
-    
-    li {
-      margin-left: 30px;
-
-        @media (max-width: $mobile-max) {
-        display: block;
-        margin-left: 0;
-        margin-top: 20px;
-        margin-bottom: 20px;
-        text-align: center;
-      }
+   
+    .social-item {
+        width: 26px;
+        height: 26px;
+        margin-left: 30px;
     }    
-
 }
 
 
