--- a/src/styles/blocks/_form.scss
+++ b/src/styles/blocks/_form.scss
@@ -1,32 +1,29 @@
 .form {
     display: flex;
-   
-    flex-basis: 100%;
-    justify-content: space-between;
-    font-size: 28px;
-    line-height: 38px;
-   
+    width: 100%;
+        
     @media (max-width: $tablet-max) {
-      width: auto; 
-      flex-wrap: wrap;
+        flex-wrap: wrap;
    }
-    @media (max-width: $mobile-max) {
-    display: block;
-   }
-   
 }
-  
 .form-field {
-    width: 33.33%;
-    margin-right: $gap;
-
+    width: 100%;
+    display: inline-block;
+    padding-left:  $gap;
+  
     @media (max-width: $tablet-max) {
         width: 50%;
-        margin-right: 0;
+          
     }
     @media (max-width: $mobile-max) {
+        padding-left: 0;
         width: 100%;
     }
+ 
+}
+.form :nth-child(1) {
+    padding-left: 0;
+   
 }
 
 .form-label {
@@ -37,12 +34,36 @@
 }
   
 .form-input   {
+    display: flex;
     width: 100%; 
     height: 104px;
     padding:  20px;
     font-family: $font;
+    font-size: 28px;
+    line-height: 38px;
     border-radius: 5px;
     background-color: $color-light;
     border: none;
+
+    @media (max-width: $mobile-max) {
+        text-align: center;
+    }
    
+}
+.form-btn {  
+    width: 100%;
+    margin-top: 26px;
+    margin-left: $gap;
+    font-family: $font;
+    font-size: 42px;
+    background-color: $color-accent;
+    color: $color-light;
+    border-radius: 5px;
+    border: none;
+    
+    @media (max-width: $tablet-max) {
+        margin-left: 0;
+        height: 104px;
+    }
+    
 }
