--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -4,14 +4,17 @@
     top: 0;
     z-index: 1000;
     width: 100%;
+    // height: 90px;
     background-color: $color-dark;
+}
+.header-inner {
+    @include inner;
 }
 
 .header-wrap {
     display: flex;
     align-items: center;
-    padding: 0 82px;
-
+   
     @media (max-width: $tablet-max) {
         padding: 0 10px;
     }
