--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -4,8 +4,14 @@
     top: 0;
     z-index: 1000;
     width: 100%;
-    // height: 90px;
+    height: 90px;
     background-color: $color-dark;
+
+    @media (max-width: $mobile-max) {
+        height: 70px;
+        padding: 16px 0;
+       
+    }
 }
 .header-inner {
     @include inner;
@@ -14,14 +20,7 @@
 .header-wrap {
     display: flex;
     align-items: center;
-   
-    @media (max-width: $tablet-max) {
-        padding: 0 10px;
-    }
-
-    @media (max-width: $mobile-max) {
-        padding: 0 16px;
-    }
+    
 }
 .header-logo {
     margin-right: auto;
