--- a/src/styles/blocks/_promo.scss
+++ b/src/styles/blocks/_promo.scss
@@ -1,6 +1,8 @@
 .promo {
   display: flex;
   margin:  auto;
+// margin: 0 auto;
+
 }
 
 .promo-visual {
@@ -14,15 +16,16 @@
     padding-bottom: 214px;
     display: flex;
     flex-direction: column;
+   
 
     @media (max-width: $tablet-max) {
         padding-top: 180px;
         padding-bottom: 190px; 
     }
     @media (max-width: $mobile-max) {
-        padding-top: 110px;
+        padding-top: 100px;
         padding-bottom: 100px; 
-        margin-top: 0;
+        // margin-top: 0;
     }
 }
 
