--- a/src/styles/blocks/_promo.scss
+++ b/src/styles/blocks/_promo.scss
@@ -1,7 +1,7 @@
 .promo {
   display: flex;
   margin:  auto;
-// margin: 0 auto;
+margin: 0 auto; 
 
 }
 
@@ -25,7 +25,7 @@
     @media (max-width: $mobile-max) {
         padding-top: 100px;
         padding-bottom: 100px; 
-        // margin-top: 0;
+       
     }
 }
 
