сделаны фильтры и табы

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -9,10 +9,11 @@
 @import"blocks/_header";
 @import"blocks/_main-menu";
 @import"blocks/_btn";
-@import"blocks/_services";
+@import"blocks/_catalog";
 @import"blocks/_order";
 @import"blocks/_footer";
 @import"blocks/_form";
 @import"blocks/_rewies";
 @import"blocks/_contacts";
 @import"blocks/_FAQ";
+@import"blocks/_filter";
