--- a/src/styles/blocks/_FAQ.scss
+++ b/src/styles/blocks/_FAQ.scss
@@ -22,8 +22,7 @@
       margin-top: 80px;
    
      
-
-      @media (max-width: $tablet-max) {
+    @media (max-width: $tablet-max) {
         margin-top: 70px;
     }
     @media (max-width: $mobile-max) {
@@ -56,12 +55,13 @@
 
 .accordion-answear {
     display: none;
+    text-align: left;
     font-family: $font;
     font-size: 18px;
     line-height: 25px;
     padding: 0 30px 30px;
-  
-   
+    margin-top: 25px;
+      
    
     @media (max-width: $tablet-max) {
         font-size: 16px;
