--- a/src/styles/blocks/_catalog.scss
+++ b/src/styles/blocks/_catalog.scss
@@ -1,4 +1,4 @@
-.services {
+.catalog {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -11,11 +11,11 @@
         padding:  90px 0;
     }
 }
-.services-main {
+.catalog-main {
     background-color: #c4c4c4;
     margin-bottom: 31px;
 }
-.services-inner {
+.catalog-inner {
     @include inner;
 }
 
@@ -32,7 +32,7 @@ h2 {
     
 }
 
-.services-works {
+.catalog-works {
     display: flex;
     padding-bottom: 30px;
     justify-content:  center;
@@ -43,7 +43,7 @@ h2 {
     }
   
 }
-.services-works a {
+.catalog-works a {
     display: block;
     font-family: $font;
     font-size: 22px;
@@ -73,7 +73,7 @@ h2 {
         margin-bottom: 60px;
     }
 }
-.services-figure {
+.works-item {
     display: flex;
     flex-basis: 25%;
     flex-shrink: 0;
@@ -99,7 +99,7 @@ h2 {
 .caption {
     @include section-caption;
 }
-.services .btn {
+.catalog .btn {
     padding-top: 30px;
    
     @media (max-width: $mobile-max) {
