--- a/src/styles/blocks/_contacts.scss
+++ b/src/styles/blocks/_contacts.scss
@@ -10,59 +10,36 @@
 }
 .contacts-inner {
     @include inner;
+    
 }
 h2 {
     @include section-h2;
 }
-.contacts-wrap {
-    display: flex;
-    flex-direction: column;
+
+
+.contacts-item {
+    display: none;
+    // justify-content: space-between;
+    // padding-right: 40px;
       
-}
-.cities {
+    &.active {
+      display: flex;
+      justify-content: space-between;
+      padding-right: 40px;
+    }
+  }
+.filter-item {
     display: flex;
-    justify-content: center;
-    font-family: $font;
+    flex-wrap: wrap; 
     font-size: 22px;
     line-height: 24px;
-    margin-bottom: 40px;
-   
-    @media (max-width: $tablet-max) {
-        padding-top: 70px;
-    }
-    @media (max-width: $mobile-max) {
-        padding-top: 50px;
-        padding-bottom: 30px;
-    }
-    
 }
-.cities a {
-    display: inline-block;
-    padding-left: 50px;
-    color: rgba(0 0 0.8);
-    text-decoration: none;
-    &:hover {
-        color: $color-accent;
-    }
-  
-}
-.cities :first-child {
-    padding-left: 0;
-  
-}
-.contacts-content {
-    display: flex;
-   
-    @media (max-width: $mobile-max) {
-        flex-wrap: wrap;
-    }
-  
-}
-.contacts-content ul {
+
+.contacts-item ul {
     display: block;
-    width: 40%;
     text-align: center;
-    padding-top: 15px;
+    padding-top: 20px;
+    margin-left: 200px;
     font-family: $font;
     font-size: 24px;
     line-height: 33px;
@@ -75,20 +52,13 @@ h2 {
     @media (max-width: $mobile-max) {
         font-size: 16px;
         line-height: 22px;
+        padding-bottom: 10px;
         width: 100%;
         text-align: left;
     }
 }
-.contacts-content .map {
-    display: block;
-    width: 60%;
-    filter: drop-shadow(0 0 18px rgba(212, 98, 64, 0.1));
-    
-      @media (max-width: $mobile-max) {               display: flex;
-        width: 100%;
-        
-    }
-}
+
+
 
     
 
