--- a/src/styles/blocks/_main-menu.scss
+++ b/src/styles/blocks/_main-menu.scss
@@ -22,23 +22,31 @@
         display: block;
     }
     li {
-      padding: 30px;
-     
+      padding-left: 30px;
+      margin-top: 2px;
+   
+                
       @media (max-width: $mobile-max) {
         padding: 10px;
         text-align: center;
       }
     }    
     a {
+      display: block;
+      align-items: center;
       color: $color-light;
       font-size: 14px;
       line-height: 24px;
       font-weight: 700;
       padding: 30px;
       text-decoration: none;
-      &:hover {
+      
+            
+      &:hover,
+      &.active {
         background-color: $color-accent;
       }
+    
     }
   }
 }
